// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader placeholders should render <AppPlaceholder /> correctly 1`] = `
<ConnectFunction
  style={
    Object {
      "marginLeft": 0,
      "padding": 0,
    }
  }
>
  <Holder
    height={16}
    primaryColor="#FFFFFF"
    secondaryColor="#FFFFFF"
    speed={2}
    store={[Function]}
    width={300}
  >
    <rect
      height="10"
      rx="0"
      ry="0"
      width="420"
      x="0"
      y="0"
    />
  </Holder>
  <div>
    <Bullseye>
      <Spinner />
    </Bullseye>
  </div>
</ConnectFunction>
`;

exports[`Loader placeholders should render <CardLoader /> correctly 1`] = `
<Grid
  gutter="md"
>
  <GridItem
    sm={12}
    style={
      Object {
        "padding": 24,
      }
    }
  >
    <Gallery
      gutter="md"
    >
      <GalleryItem
        key="0"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="1"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="2"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="3"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="4"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="5"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="6"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="7"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="8"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="9"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="10"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="11"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
      <GalleryItem
        key="12"
      >
        <Card
          style={
            Object {
              "height": 350,
            }
          }
        >
          <CardBody>
            <Holder
              height={160}
              primaryColor="#f3f3f3"
              secondaryColor="#ecebeb"
              speed={2}
              width={300}
            >
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="300"
                x="2"
                y="99"
              />
              <rect
                height="5.76"
                rx="3"
                ry="3"
                width="290"
                x="2"
                y="119.72"
              />
              <rect
                height="6.4"
                rx="3"
                ry="3"
                width="201"
                x="2"
                y="139"
              />
              <rect
                height="82.74"
                rx="0"
                ry="0"
                width="271.6"
                x="-2.16"
                y="0.67"
              />
              <rect
                height="3"
                rx="0"
                ry="0"
                width="6"
                x="136.84"
                y="37.67"
              />
            </Holder>
          </CardBody>
        </Card>
      </GalleryItem>
    </Gallery>
  </GridItem>
</Grid>
`;

exports[`Loader placeholders should render <PortfolioLoader /> correctly 1`] = `
<Grid
  gutter="md"
>
  <GridItem
    sm={12}
  >
    <Holder
      height={16}
      primaryColor="#FFFFFF"
      secondaryColor="#FFFFFF"
      speed={2}
      width={300}
    >
      <rect
        height="16"
        rx="0"
        ry="0"
        width="420"
        x="0"
        y="0"
      />
    </Holder>
  </GridItem>
  <GridItem
    sm={12}
    style={
      Object {
        "paddingLeft": 16,
        "paddingRight": 16,
      }
    }
  >
    <CardLoader
      items={5}
    />
  </GridItem>
</Grid>
`;
